--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,15 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme"
-        android:networkSecurityConfig="@xml/network_security_config"
-        >
-        <activity android:name="org.techtown.exper_version_2.ExampleXML"></activity>
-        <activity android:name="org.techtown.exper_version_2.ListItemInfo" />
-        <activity android:name="org.techtown.exper_version_2.MainActivity">
+        android:usesCleartextTraffic="true">
+        <activity android:name=".Main2Activity"></activity>
+        <activity android:name=".ExampleXML" />
+        <activity android:name=".ListItemInfo" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
